public class Main {
    static FedFlix fedFlix = new FedFlix();
    public static void main(String[] args) {
        fedFlix.runFedFlix();
    }
}
